--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.herzen.tipcalc.MainActivity">
+    tools:context=".activities.MainActivity">
 
     <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tipContent"
         layout="@layout/content_tip" />
-
+<fragment
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/tipContent"
+    android:id="@+id/fragmentList"
+    android:name="com.herzen.tipcalc.fragments.TipHistoryListFragment"
+    tools:layout="@layout/fragment_tip_history_list3" />
 
 
 </RelativeLayout>
